Fixed stretch issue on about robosub image

--- a/src/styles/aboutRoboSub.css
+++ b/src/styles/aboutRoboSub.css
@@ -14,9 +14,11 @@
     margin: 0;
 }
 .TeamImage{
-    flex:2;
-    max-width: 800px;
-    max-height: 400px;
+    max-width: 1000px;
+    max-height: 500px;
+    width: auto;
+    height: auto;
+    object-fit: contain;
     border-radius: 100px;
     margin: 0;
 }
